welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:31: error: too many arguments for method gauche: ()Unit
	gauche(2)
              ^